# FoodPricePrediction-AIEngine

./: .gitignore  DEPLOYMENT.md  Dockerfile  PIPELINE.md  README.md  data.md  entrypoint.sh  pyproject.toml  render.yaml
agri_price/: data.py  feature_store.py  ingestion.py  predictor.py  pyproject.toml
agri_price/agri_price/core/: predictor.py  state_coords.py
agri_price/agri_price/data/: db.py  db_manager.py  feature_logic.py
agri_price/agri_price/ingestion/: base.py  orchestrator.py
agri_price/agri_price/ingestion/fetchers/: diesel.py  inflation.py  insecurity.py  market.py  news.py  weather.py
agri_price/core/: utils.py
api/: app.py
dashboard/: app.py
data/: commodity_ids.json
demo/: app.py  demo-app.py  demo_app--old.py  setup_local_db.py
pre/: data.md  preprocessing.py  training.ipynb
scripts/: build_dataset.py  setup_db.py  test_api.py  train_model.py
scripts/01_collection/: bootstrap_diesel.py  build_dataset.py
scripts/02_database/: setup_db.py
scripts/03_maintenance/: update_live_features.py
scripts/04_training/: train_model.py
scripts/05_validation/: test_api.py
