[project]
name = "agri-price"
version = "0.1.0"
description = "Core predictive engine and data processing for agricultural price forecasting"
dependencies = [
    "catboost",
    "pandas",
    "shap",
    "numpy",
    "requests",
    "reverse-geocoder",
    "scikit-learn",
    "transformers",
    "torch",
    "tqdm",
    "openpyxl",
    "python-dotenv",
    "acled",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
